# ioc-fanger

./: .codacy.yml  .gitignore  .travis.yml  404.html  AUTHORS.rst  CHANGELOG.md  CNAME  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  regex.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.benchmarks/Darwin-CPython-3.14-64bit/: 0001_benchmark.json
.benchmarks/Linux-CPython-3.10-64bit/: 0001_benchmark.json
.benchmarks/Linux-CPython-3.14-64bit/: 0001_benchmark.json
.benchmarks/Linux-CPython-3.9-64bit/: 0001_benchmark.json  0001_db88c91513ca60661e99f40f747ad7939feb823d_20210308_122641_uncommited-changes.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  docs.yaml  lint.yaml  pytest.yml  python-publish.yml
.github/workflows/workflows/: pytest.yml
docker/: lint.sh
docs/: Makefile  about.md  conf.py  index.md  index.rst  installation.rst  local-dev.md  make.bat  quick-start.md  usage.rst
docs/overrides/: main.html
ioc_fanger/: __init__.py  app.py  cli.py  defang.json  fang.json  grammars.py  ioc_fanger.py  regexes_defang.py  regexes_fang.py
local-dev/: index.html
overrides/: main.html
quick-start/: index.html
scripts/: find_hotspots.py
search/: search_index.json
tests/: conftest.py  sample_text_defanged.txt  sample_text_fanged.txt  test_benchmarks.py  test_dot_variants.py  test_ioc_fanger.py  test_ioc_fanger_cli.py  test_ip_address_defanging.py  test_ip_address_handling.py  test_json.py  test_redos.py  test_regex_coverage.py  test_zz_regex_coverage.py
