[tool.black]
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "C0114, R1705, C0103"

[tool.pytest.ini_options]
addopts = "-vv --cov=. --cov-report term-missing --cov-fail-under 98 --benchmark-storage=.benchmarks/Linux-CPython-3.10-64bit/ --benchmark-compare=0001 --benchmark-compare-fail=mean:30% --benchmark-columns='mean,stddev,median,iqr,outliers'"
python_files = "tests/test_*.py"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.setuptools_scm]
